--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
     "angular-2-local-storage": "^1.0.1",
     "angular-star-rating": "^3.0.8",
     "angular2-flash-messages": "^2.0.5",
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
     "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.1.1",
     "ng2-rating": "0.0.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
